# ccflow

./: .bumpversion.cfg  .copier-answers.yaml  .gitattributes  .gitignore  Makefile  README.md  Tutorial.ipynb  build_notebook.py  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  wiki.yml
ccflow/: __init__.py  _flow_model_binding.py  arrow.py  base.py  callable.py  compose.py  context.py  decorator.py  dep.py  enums.py  evaluator.py  flow_model.py  generic_base.py  global_state.py  local_persistence.py  object_config.py  pickling.py  publisher.py  serialization.py  validators.py
ccflow/evaluators/: __init__.py  common.py  dry_run.py  reporting.py  retry.py
ccflow/examples/: example.parquet  flow.py  narwhals_pipelines.ipynb
ccflow/examples/calculator/: __init__.py  __main__.py  functions.py
ccflow/examples/calculator/config/: base.yaml
ccflow/examples/calculator/config/function/: add.yaml  power.yaml  rounded.yaml  scale.yaml  tail_ratio.yaml
ccflow/examples/calculator/config/output/: log.yaml  print.yaml  write.yaml
ccflow/examples/config/: conf.yaml
ccflow/examples/config/registry/: default.yaml
ccflow/examples/config/registry/sources/: default.yaml
ccflow/examples/config/registry/sources/source1/: db.yaml  parquet.yaml
ccflow/examples/config/registry/sources/source2/: db.yaml  parquet.yaml
ccflow/examples/etl/: __main__.py  explain.py  models.py
ccflow/examples/flow_model/: __init__.py  flow_model_example.py  flow_model_hydra_builder_demo.py
ccflow/examples/flow_model/config/: flow_model_hydra_builder_demo.yaml
ccflow/examples/tpch/: __init__.py  data_generators.py  query.py
ccflow/examples/tpch/config/: conf.yaml
ccflow/exttypes/: arrow.py  exprtk.py  frequency.py  jinja.py  narwhals.py  pandas.py  polars.py  pyobjectpath.py
ccflow/exttypes/pydantic_numpy/: __init__.py  ndarray.py  ndtypes.py
ccflow/models/: __init__.py  narwhals.py  publisher.py  reporting.py  retry.py
ccflow/plugins/: omegaconf_resolvers.py
ccflow/publishers/: __init__.py  composite.py  file.py  print.py
ccflow/publishers/parquet/: __init__.py  polars.py
ccflow/result/: dict.py  generic.py  list.py  narwhals.py  numpy.py  pandas.py  pyarrow.py  xarray.py
ccflow/tests/: flow_model_hydra_fixtures.py  local_helpers.py  test_arrow.py  test_base.py  test_base_cloudpickle.py  test_base_load_config.py  test_base_registry.py  test_base_serialize.py  test_callable.py  test_context.py  test_decorator.py  test_effective_key_characterization.py  test_evaluation_context_serialization.py  test_evaluator.py  test_flow_context.py  test_flow_model.py  test_flow_model_alias.py  test_flow_model_context_shorthand.py  test_flow_model_hydra.py  test_flow_model_optional_context.py  test_flow_model_strict_context.py  test_generic_base.py  test_global_state.py  test_import.py  test_lazy_result.py  test_local_persistence.py  test_object_config.py  test_resolvers.py  test_result.py  test_utils.py  test_validators.py
ccflow/tests/config/: conf_flow.yaml  conf_flow_alias.yaml  conf_from_python.yaml  conf_mixin.yaml
ccflow/tests/data/: __init__.py  path_key_resolver_samples.py  python_object_samples.py
ccflow/tests/enums/: test_enums.py  test_pydantic.py
ccflow/tests/evaluators/: test_common.py  test_reporting.py  test_retry.py  util.py
ccflow/tests/examples/: test_calculator.py  test_etl.py  test_flow_model_examples.py  test_tpch.py
ccflow/tests/exttypes/: test_arrow.py  test_exprtk.py  test_frequency.py  test_jinja.py  test_narwhals.py  test_pandas.py  test_polars.py  test_pydantic_numpy.py  test_pyobjectpath.py
ccflow/tests/models/: test_narwhals.py  test_reporting.py  test_retry.py
ccflow/tests/plugins/: test_omegaconf_resolvers.py
ccflow/tests/publishers/: test_composite.py  test_file.py  test_print.py
ccflow/tests/publishers/parquet/: test_polars.py
ccflow/tests/result/: test_narwhals.py  test_pyarrow.py
ccflow/tests/ui/: test_cli.py  test_model.py  test_registry.py  utils.py
ccflow/tests/ui/panel/: test_cli.py  test_model.py  test_registry.py
ccflow/tests/ui/spaday/: test_cli.py  test_model.py  test_registry.py  utils.py
ccflow/tests/utils/: test_arrow.py  test_behavior_hash.py  test_chunker.py  test_compose.py  test_compose_hydra.py  test_hydra.py  test_imports.py  test_mixin.py  test_mixin_hydra.py  test_path_resolve_spec.py  test_reporting.py  test_retry.py  test_tokenize.py
ccflow/ui/: __init__.py  cli.py  model.py  registry.py
ccflow/ui/panel/: cli.py
ccflow/ui/spaday/: __init__.py  cli.py  model.py  registry.py
ccflow/utils/: __init__.py  arrow.py  chunker.py  core.py  hydra.py  imports.py  logging.py  mixin.py  pandas.py  path_resolve_spec.py  pydantic1to2.py  reporting.py  retry.py  tokenize.py
ccflow/utils/dask_tokenize/: __init__.py
conda-recipe/: meta.yaml
docs/design/: flow_model_design.md
docs/wiki/: Build-from-Source.md  Configuration-Explain.md  Configuration.md  Contribute.md  Design-Goals.md  ETL.md  First-Steps.md  Flow-Model.md  Home.md  Installation.md  Key-Features.md  Local-Development-Setup.md  PathKeyResolverMixin.md  Tokenization.md  Workflows.md  _Footer.md  _Sidebar.md
docs/wiki/contribute/: Contribute.md  Local-Development-Setup.md
docs/wiki/explanation/: Configuration-and-Hydra.md  Core-Concepts.md  Explanation.md
docs/wiki/how-to/: Bind-Logic-to-Configs.md  Cache-Results.md  Configure-Complex-Values.md  How-to-Guides.md  Installation.md  Retry-on-Failure.md  Run-Workflows-from-the-CLI.md
docs/wiki/reference/: Built-in-Models.md  Contexts-and-Results.md  Core-Types.md  Flow-Model.md  Reference.md  Reporting.md
docs/wiki/tutorials/: Building-a-Configurable-Calculator.md  Building-an-ETL-Pipeline.md  Composing-an-ETL-Application.md  Configuring-Models.md  Defining-Workflows.md  First-Steps.md  Tutorials.md
examples/: evaluator_demo.py  flow_model_example.py  flow_model_hydra_builder_demo.py  ml_pipeline_demo.py
examples/config/: flow_model_hydra_builder_demo.yaml
