[build-system]
requires = ["hatchling>=1.22.4,<1.23", "hatch-jupyter-builder"]
build-backend = "hatchling.build"

[project]
name = "ccflow"
description = "TODO"
version = "0.1.2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Point72", email = "OpenSource@Point72.com" },
]
keywords = [
    "configuration",
    "flow",
    "dag",
    "hydra",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "cloudpathlib",
    "cloudpickle",
    "hydra-core",
    "IPython",
    "jinja2",
    "numpy<2",
    "orjson",
    "pandas",
    "pyarrow",
    "pydantic>=2.6,<3",
    "smart_open",
    "tenacity",
]

[project.optional-dependencies]
full = [
    "dask",
    "pandas",
    "pandera",
    "plotly",
    "polars",
    "ray",
    "scipy",
    "xarray"
]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatchling",
    "ruff>=0.3,<0.5",
    "toml",
    "twine",
    "wheel",
    # Full deps
    "csp>=0.0.4,<0.1",
    "dask",
    "pandas",
    "pandera",
    "plotly",
    "polars",
    "ray",
    "scipy",
    "xarray",
    # Test deps
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
]

[project.urls]
Repository = "https://github.com/point72/ccflow"
Homepage = "https://github.com/point72/ccflow"

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = false
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "ccflow/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "conda-recipe/meta.yaml"
search = "version: {current_version}"
replace = "version: {new_version}"

[tool.check-manifest]
ignore = [
    "docs/**",
    "conda-recipe/**",
    "Makefile",
    "setup.py",
    "*.ipynb",
]

[tool.cubist.sdlc.artifactory]
pypi = "https://artifacts.prod.devops.point72.com/artifactory/dept-ccrt-pypi-builds-local"
pypi-prod = "https://artifacts.prod.devops.point72.com/artifactory/dept-ccrt-pypi-published-local"
conda = "https://artifacts.prod.devops.point72.com/artifactory/dept-ccrt-conda-builds-local"
conda-prod = "https://artifacts.prod.devops.point72.com/artifactory/dept-ccrt-conda-published-local"

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
include = [
    "/ccflow",
    "LICENSE",
    "README.md",
]
exclude = [
    "/.github",
    "/.gitignore",
    "/docs",
]

[tool.hatch.build.targets.wheel]
include = [
    "/ccflow",
]
exclude = [
    "/.github",
    "/.gitignore",
    "/pyproject.toml",
    "/docs",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["ccflow"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
